practice/networkpolicies/task-3/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app.kubernetes.io/name: webserver
  name: task-3-webserver
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
      - containerPort: 80
        name: http
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: webserver
  name: task-3-webserver
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/name: webserver
  type: ClusterIP
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app.kubernetes.io/name: client
  name: task-3-client
spec:
  containers:
  - image: busybox
    name: busybox
    command:
      - /bin/sh
      - -c
    args:
      - "sleep 3600"
