practice/networkpolicies/task-3/netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: task-1-allow-webserver-to-receive-traffic-from-client
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: webserver
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: client
    ports:
    - protocol: TCP
      port: 8080
